--- a/css/style.css
+++ b/css/style.css
@@ -20,23 +20,24 @@ a:hover {
 nav {
   position: absolute;
   z-index: 3;
-  padding: 0.8em 6% 0 6%;
-  width: 88%;
+  margin: auto;
+  padding: 0.8em 7%;
+  width: 86%;
 }
 
 nav #home {
   display: block;
   float: left;
-  padding-top: 18px;
+  padding: 18px 1%;
   text-decoration: none;
   color: #000;
-  width: 100%;
+  width: 200px;
 }
 
 nav #home img {
   position: absolute;
   top: 20px;
-  left: 6%;
+  left: 7%;
   width: 40px;
   height: auto;
 }
@@ -44,7 +45,7 @@ nav #home img {
 nav #home #home-title {
   position: relative;
   display: inline-block;
-  left: 48px;
+  left: 46px;
   font-size: 1.2em;
 }
 
@@ -75,7 +76,7 @@ nav .menu-btn:hover {
 
 nav #menu {
   position: fixed;
-  right: 6%;
+  right: 7%;
   top: 75px;  
   clear: both;
   max-height: 0;
@@ -88,20 +89,16 @@ nav .menu-icon {
 /*  float: right;*/
 /*  position: relative;*/
   position: fixed;
-  right: 6%;
+  right: 7%;
   padding: 18px 0.5em;
   margin: 10px 0;
   user-select: none;
-  background-color: rgba(255, 136, 0, 0.3);
-}
-
-nav .menu-icon:hover {
-  background-color: rgba(255, 136, 0, 1);
-  transition: .27s ease-out;
+/*  background-color: rgba(255, 136, 0, 0.3);*/
+  background-color: rgba(251, 251, 251, 0.8);
 }
 
 nav .menu-icon .navicon {
-  background: #fff;
+  background: #333;
   display: block;
   height: 2px;
   position: relative;
@@ -111,7 +108,7 @@ nav .menu-icon .navicon {
 
 nav .menu-icon .navicon:before,
 nav .menu-icon .navicon:after {
-  background: #fff;
+  background: #333;
   content: '';
   display: block;
   height: 100%;
@@ -138,6 +135,12 @@ nav .menu-btn:checked ~ #menu {
   max-height: 240px;
 }
 
+nav .menu-btn:checked ~ .menu-icon {
+/*  background-color: rgba(255, 136, 0, 1);*/
+  background-color: rgba(255, 255, 255, 1);
+  transition: .27s ease-out;
+}
+
 nav .menu-btn:checked ~ .menu-icon .navicon {
   background: transparent;
 }
@@ -156,11 +159,10 @@ nav .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
 }
 
 header {
-/*  background-color: #fff;*/
-  width: 80%;
+  width: 86%;
   margin: 0 auto;
   position: relative;
-  padding: 13% 8% 0.5em 0;
+  padding: 13% 0 0.5em 0;
 }
 
 header a {
@@ -189,25 +191,32 @@ header h1 {
 }
 
 #portfolio {
-  width: 80%;
+  width: 86%;
   margin: auto;
-  padding: 4% 8% 1em 0;
+  padding: 5% 0;
   grid-template-columns: none;
-}
-
-#portfolio:hover {
-  /* shadow, transparency */
 }
 
 #portfolio img {
   width: 100%;
 }
 
+/* project */
+
+.project-info:hover > .project-img {
+  box-shadow: 0px 0px 15px 0px rgba(200, 200, 200, 0.6);
+  transition: box-shadow .2s ease-out;
+}
+
+
+
+/* ------- */
+
 #about-me {
-  width: 80%;
+  width: 86%;
   margin: auto;
   position: relative;
-  padding: 4% 8% 1em 0;
+  padding: 4% 0 1em 0;
 }
 
 #about-me h2 {
@@ -228,9 +237,9 @@ header h1 {
 }
 
 #about-container {
-  padding: 0 8% 0 0;
+  padding: 0;
   margin: auto;
-  width: 80%;
+  width: 86%;
   grid-template-columns: none;
   font-size: 16px;
   line-height: 1.45em;
@@ -314,17 +323,15 @@ header h1 {
 }
 
 footer {
-  width: 80%;
+  width: 86%;
   margin: auto;
-  padding: 2em 8% 1em 0;
+  padding: 2em 0 1em 0;
 } 
-/* add a 8% padding-right for hamburger*/
 
 footer .contact {
   margin: 0.3em; 
   text-align: center;
   font-size: 18.5px;
-  height: 45px;
 }
 
 footer .contact a {
