--- a/css/style.css
+++ b/css/style.css
@@ -190,24 +190,41 @@ header h1 {
   padding: 0.8em 0 0.5em 0;
 }
 
+/* project */
+
 #portfolio {
   width: 86%;
   margin: auto;
   padding: 5% 0;
-  grid-template-columns: none;
 }
 
-#portfolio img {
+.project-img img {
   width: 100%;
+  height: 100%;
 }
 
-/* project */
-
-.project-info:hover > .project-img {
-  box-shadow: 0px 0px 15px 0px rgba(200, 200, 200, 0.6);
-  transition: box-shadow .2s ease-out;
+.project-img {
+  display: flex; 
+/*  display: inline-block;*/
+  position: relative;
 }
 
+/* Pseudo-element animation https://codepen.io/tribex/pen/ZxXJoO */
+.project-img::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  box-shadow: 0 10px 50px 0 rgba(0, 0, 0, 0.4);
+  opacity: 0;
+  transition: opacity .2s ease-out;
+}
+
+.project-info:hover > .project-img::before {
+  opacity: 1;
+}
 
 
 /* ------- */
