--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ a {
 
 a:hover {
   color: #f80;
-  transition: color .27s ease-out;
+  transition: color .2s ease-out;
 }
 
 /* Hamburger - Edited from https://codepen.io/anon/pen/pYvvEG */
@@ -34,7 +34,7 @@ nav #home {
   width: 200px;
 }
 
-nav #home img {
+nav #home span {
   position: absolute;
   top: 20px;
   left: 7%;
@@ -42,26 +42,22 @@ nav #home img {
   height: auto;
 }
 
+nav #home:hover {
+  fill: #f80;
+  color: #f80;
+  transition: all .2s ease-out;
+}
+
 nav #home #home-title {
   position: relative;
   display: inline-block;
   left: 46px;
-  font-size: 1.2em;
-}
-
-nav ul {
-  padding: 0 7%;
-  margin: 0;
-  border-radius: 0 0 1em 1em;
-  float: right;
-  text-align: center;
-  list-style: none;
-  overflow: hidden;
-  background-color: rgba(255, 255, 255, 0.9);
+/*  font-size: 1.2em;*/
+  font-size: 24px;
 }
 
 nav li a {
-  font-size: 18.5px;
+  font-size: 24px;
   display: block;
   padding: 1em;   
   margin: 0.3em;
@@ -75,12 +71,25 @@ nav .menu-btn:hover {
 }
 
 nav #menu {
+  margin: 0;
+  padding: 0;
+/*  float: right;*/
+  text-align: center;
+  list-style: none;
+  background-color: rgba(255, 255, 255, 0.9);
+
   position: fixed;
-  right: 7%;
-  top: 75px;  
-  clear: both;
+  right: 0;
+  top: 0;
+  
+/*  clear: both;*/
   max-height: 0;
-  transition: max-height .2s ease-out;
+  overflow: hidden;
+  
+  transition: max-height .2s ease-out, padding .2s ease-out;
+  
+  width: 100vw;
+  z-index: -3;
 }
 
 nav .menu-icon {
@@ -132,13 +141,16 @@ nav .menu-btn {
 }
 
 nav .menu-btn:checked ~ #menu {
-  max-height: 240px;
+/*  max-height: 240px;*/
+  max-height: 100vh;
+  height: 100vh;
+  padding: 50vw 0;
 }
 
 nav .menu-btn:checked ~ .menu-icon {
 /*  background-color: rgba(255, 136, 0, 1);*/
-  background-color: rgba(255, 255, 255, 1);
-  transition: .27s ease-out;
+  background-color: rgba(255, 255, 255, 0.9);
+  transition: .2s ease-out;
 }
 
 nav .menu-btn:checked ~ .menu-icon .navicon {
@@ -174,7 +186,7 @@ header a:hover,
 #about-container a:hover {
   border-bottom: 2px solid #f80;
   color: #f80;
-  transition: color .27s ease-out, border .1s ease-out;
+  transition: color .2s ease-out, border .1s ease-out;
 }
 
 header p {
@@ -184,7 +196,7 @@ header p {
 
 header h1 {
   font-size: 34.7px;
-  line-height: 1.25em;
+  line-height: 1.3em;
   font-weight: 600;
   margin: 0;
   padding: 0.8em 0 0.5em 0;
@@ -196,17 +208,24 @@ header h1 {
   width: 86%;
   margin: auto;
   padding: 5% 0;
+/*  grid-template-columns: none;*/
+}
+
+.project-info {
+  padding: 1.3em 0;
 }
 
 .project-img img {
   width: 100%;
   height: 100%;
+  border-radius: 1em;
 }
 
 .project-img {
   display: flex; 
 /*  display: inline-block;*/
   position: relative;
+  top: 0;
 }
 
 /* Pseudo-element animation https://codepen.io/tribex/pen/ZxXJoO */
@@ -217,13 +236,42 @@ header h1 {
   right: 0;
   bottom: 0;
   left: 0;
-  box-shadow: 0 10px 50px 0 rgba(0, 0, 0, 0.4);
+  box-shadow: 0 20px 40px 0 rgba(0, 0, 0, 0.25);
   opacity: 0;
   transition: opacity .2s ease-out;
+  border-radius: 1em;
 }
 
 .project-info:hover > .project-img::before {
   opacity: 1;
+}
+
+.project-info:hover > .project-img {
+  top: -10px;
+  transition: top .2s ease-out;
+}
+
+.project-info:hover > .project-title,
+.project-info:hover > .project-description {
+  color: #f80;
+}
+
+.project-title, .project-description {
+  color: #000;
+}
+
+.project-title {
+  font-weight: 600;
+  padding: 20px 0;
+  margin: 0;
+  font-size: 28px;
+}
+
+.project-description {
+  margin: 0;
+  padding: 0;
+  font-size: 18px;
+  line-height: 1.5em;
 }
 
 
@@ -359,7 +407,7 @@ footer .contact a {
 
 footer .contact a:hover {
   color: #f80;
-  transition: color .27s ease-out;
+  transition: color .2s ease-out;
 }
 
 footer #signature {
@@ -370,7 +418,7 @@ footer #signature {
 
 @media (max-width: 30em) and (min-width: 20em) {
   header h1 {
-    font-size: 28px;
+    font-size: 32px;
   }
   
   header {
@@ -386,13 +434,6 @@ footer #signature {
     width: 95%;
     z-index: 0;
   }
-  
-  nav ul {
-    background-color: transparent;
-    padding: 0;
-    text-align: right;
-/*    max-width: 18%;*/
-  }
 
   nav li {
     padding: 0.25em;
@@ -402,16 +443,31 @@ footer #signature {
   nav li a {
     padding: 0.4em 0.5em 0.4em 0.5em;
     color: #000;
-    font-size: .9em;
+    font-size: 18px;
   }
 
   nav #menu {
+    background-color: transparent;
+    padding: 0;
+    margin: 0;
+    text-align: right;
+    
     position: relative;
     top: 0;
-    right: 0;
+/*    right: 0;*/
     clear: none;
     float: right;
     max-height: none;
+    
+    width: auto;
+    max-width: 18%;
+  }
+  
+  nav .menu-btn:checked ~ #menu {
+/*  max-height: 240px;*/
+    max-height: none;
+    height: auto;
+    padding: 0;
   }
 
   nav .menu-icon {
@@ -427,7 +483,7 @@ footer #signature {
     max-width: 17%;
   }
 
-  nav #home img {
+  nav #home span {
     float: left;
     display: inline-block;
     position: relative;
@@ -457,7 +513,6 @@ footer #signature {
   
   header h1 {
     font-size: 42px;
-    line-height: 1.25em;
     max-width: 30em;
     padding: 0;
   }
@@ -481,6 +536,14 @@ footer #signature {
     padding: 4.5vw 0 2em 0;
   }
   
+  .project-title {
+    font-size: 32px;
+  }
+  
+  .project-description {
+    font-size: 20px;
+  }
+  
   #about-me {
     margin: auto;
     padding: 4.5vw 0% 1em 0%;
@@ -491,6 +554,24 @@ footer #signature {
     font-size: 32px;
     margin: 0;
     margin-bottom: .85em;
+  }
+  
+  #portfolio {
+/*
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+*/
+    margin: 0 auto;
+    column-count: 2;
+    column-gap: 15px; <!-- 每欄間隔 -->
+    column-fill: auto;
+  }
+  
+  .portfolio-column {
+    width: 90%;
+    break-inside: avoid;
+    word-wrap: break-word;
+    display: block;
   }
   
   #about-container {
