--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,19 @@
 body {
   font-family: 'Work Sans', sans-serif;
-  background-color: #fbfbfb;
+  background-color: #fdfdfd;
   font-size: 20px;
   font-weight: 400;
+  color: #333;
 }
 
 a {
   text-decoration: none;
-  color: #3fb3c1;
+  color: #f80;
+/*  color: #3fb3c1;*/
 }
 
 a:hover {
-  color: #f80;
+  color: #333;
   transition: color .2s ease-out;
 }
 
@@ -53,11 +55,13 @@ nav #home #home-title {
   display: inline-block;
   left: 46px;
 /*  font-size: 1.2em;*/
-  font-size: 24px;
+  font-size: 22.5px;
+  font-weight: 600;
+  letter-spacing: .25px;
 }
 
 nav li a {
-  font-size: 24px;
+  font-size: 28px;
   display: block;
   padding: 3vh;   
   margin: 3px;
@@ -105,13 +109,13 @@ nav .menu-icon {
   margin: 10px 0;
   user-select: none;
 /*  background-color: rgba(255, 136, 0, 0.3);*/
-  background-color: rgba(251, 251, 251, 0.8);
+  background-color: rgba(253, 253, 253, 0.8);
 }
 
 nav .menu-icon .navicon {
   background: #333;
   display: block;
-  height: 2px;
+  height: 2.5px;
   position: relative;
   transition: background .2s ease-out;
   width: 18px;
@@ -186,20 +190,21 @@ header a {
 header a:hover, 
 #about-me a:hover, 
 #about-container a:hover {
-  border-bottom: 2px solid #f80;
-  color: #f80;
+  border-bottom: 2px solid #333;
+  color: #333;
   transition: color .2s ease-out, border .1s ease-out;
 }
 
 header p {
   font-size: 16px;
-  line-height: 1.5em;
+  line-height: 1.65em;
 }
 
 header h1 {
-  font-size: 34.7px;
-  line-height: 1.3em;
-  font-weight: 600;
+  color: #000;
+  font-size: 37px;
+  line-height: 1.45em;
+  font-weight: 400;
   margin: 0;
   padding: 0.8em 0 0.5em 0;
 }
@@ -259,21 +264,23 @@ header h1 {
 }
 
 .project-title, .project-description {
-  color: #000;
+  color: #333;
 }
 
 .project-title {
-  font-weight: 600;
+  font-weight: 400;
   padding: 20px 0;
   margin: 0;
-  font-size: 28px;
+  font-size: 24px;
+  line-height: 1.4em;
 }
 
 .project-description {
   margin: 0;
   padding: 0;
-  font-size: 18px;
-  line-height: 1.5em;
+  font-size: 16px;
+  line-height: 1.65em;
+  color: #9c9c9c;
 }
 
 
@@ -294,12 +301,12 @@ header h1 {
 
 #about-me p, #about-me ul {
   font-size: 16px;
-  line-height: 1.5em;
+  line-height: 1.65em;
 }
 /* adapted from https://stackoverflow.com/questions/13840403/edit-line-thickness-of-css-underline-attribute */
 
 #about-me b {
-  box-shadow: inset 0 -3px 0 #fbfbfb, inset 0 -11px 0 #f6d967;
+  box-shadow: inset 0 -3px 0 #fbfbfb, inset 0 -11px 0 #fbe06e;
   font-weight: 400;
 }
 
@@ -309,7 +316,7 @@ header h1 {
   width: 86%;
   grid-template-columns: none;
   font-size: 16px;
-  line-height: 1.45em;
+  line-height: 1.65em;
 }
 
 #about-container ul {
@@ -348,8 +355,8 @@ header h1 {
 #about-container .paper {
   padding: 0.2em 0;
   font-size: 17.5px;
-  color: #222;
-  font-weight: 600;
+  color: #111;
+  font-weight: 500;
 }
 
 #about-container .major {
@@ -377,8 +384,8 @@ header h1 {
 #about-container .duration, 
 #about-container .author {
   padding: 0.05em 0 0.5em;
-  color: #ccc;
-  font-size: 14.3px;
+  color: #bfbfbf;
+  font-size: 14.5px;
   line-height: 1.6em;
 }
 
@@ -402,7 +409,7 @@ footer .contact {
 }
 
 footer .contact a {
-  color: #000;
+  color: #333;
   display: inline-block;
   padding: 0.5em;
 }
@@ -416,6 +423,11 @@ footer #signature {
   margin-top: 1.8em;
   text-align: center;
   font-size: 16px;
+  line-height: 1.6em;
+}
+
+#signature a {
+  color: #333;
 }
 
 @media (max-width: 30em) and (min-width: 20em) {
@@ -439,7 +451,7 @@ footer #signature {
 
   nav li {
     padding: 0.25em;
-    margin-bottom: 0.05em;
+    margin-bottom: 0.2em;
   }
 
   nav li a {
@@ -450,6 +462,8 @@ footer #signature {
   }
 
   nav #menu {
+    font-weight: 500;
+    letter-spacing: .25px;
     background-color: transparent;
     padding: 0;
     margin: 0;
@@ -506,8 +520,8 @@ footer #signature {
     display: inline-block;
     left: 0.6vw;
     font-size:calc(11px + 1.2vw);
-    top: 0.7vw;
-    line-height: 125%;
+    top: 0.72vw;
+    line-height: 123%;
     max-width: 9%;
   }
   
@@ -532,8 +546,13 @@ footer #signature {
   #about-me p, 
   #about-me ul {
     font-size: 20px;
-    line-height: 1.6em;
+    line-height: 1.7em;
     max-width: 60em;
+  }
+  
+  #about-me b {
+    box-shadow: inset 0 -5.5px 0 #fbfbfb, inset 0 -13px 0 #fbe06e;
+    font-weight: 400;
   }
   
   #portfolio {
@@ -600,7 +619,7 @@ footer #signature {
   #about-container .paper, 
   #about-container .award {
     font-size: 18.7px;
-    line-height: 25px;
+    line-height: 26px;
   }
   
   #about-container .award-title, 
