--- a/css/style.css
+++ b/css/style.css
@@ -217,15 +217,97 @@ header h1 {
 
 /* project */
 
-#portfolio {
-  width: 86%;
+.portfolio {
+  position: relative;
+  width: 100%;
   margin: auto;
   padding: 4% 0;
 }
 
+.portfolio h2 {
+  padding-left: 7%;
+}
+
+.project {
+  width: 86%;
+  display: block;
+  padding: 30px 7%;
+  position: relative;
+}
+
+.project:hover {
+  transition: height .2s ease-out, padding .2s ease;
+  padding: 45px 7%;
+}
+
+.project-role {
+  font-size: 15px;
+  margin: 13px 0;
+  color: #4e4e4e;
+}
+
+.project-name {
+  display: inline-block;
+  vertical-align: middle;
+  color: #333;
+  font-size: 20.5px;
+  max-width: 80%;
+  line-height: 1.35em;
+}
+
+.project-image {
+  width: 29.5%;
+  height: auto;
+  position: absolute;
+  bottom: 0;
+  right: 1px;
+}
+
+.pinchfun {
+  background-color: #fcf9f0;
+  fill: #fcf9f0;
+  background-image: linear-gradient(-180deg, #fcf9f0 74%, #fff4d9 98%);
+}
+
+.music {
+  background-color: #e2f4f5;
+  fill: #e2f4f5;
+  background-image: linear-gradient(-180deg, #e2f4f5 74%, #c3e7ee 100%);
+}
+
+.other-project {
+  width: 86%;
+  display: block;
+  padding: 15px 7%;
+  position: relative;
+  background-color: #fff;
+  border-top: 1px solid #eee;
+  border-right: 1px solid #eee;
+  border-left: 1px solid #eee;
+}
+
+.last-item {
+  border-bottom: 1px solid #eee;
+}
+
+.other-project:hover {
+  background-color: #efefef;
+  padding: 18px 7%;
+  transition: all .2s ease-out;
+}
+
+.other-project .project-name {
+  font-size: 18px;
+}
+
+.other-project .project-role {
+  font-size: 14px;
+}
+
+/* ------- */
+
 .project-info {
   padding: 1.3em 0;
-/*  display: flex;*/
 }
 
 .project-img img {
@@ -310,6 +392,7 @@ h2 {
 #contact p {
   font-size: 16px;
   line-height: 1.65em;
+  list-style: none;
 }
 /* adapted from https://stackoverflow.com/questions/13840403/edit-line-thickness-of-css-underline-attribute */
 
@@ -344,6 +427,7 @@ h2 {
   color: #555;
   border-left: 3px solid #555;
   padding-left: 10px;
+  padding-right: 10px;
 }
 
 #about-container a {
@@ -370,17 +454,35 @@ h2 {
 #about-container .button {
   display: inline-block;
   border: 1px solid #999;
-  background: #eee;
+  background: #f6f6f6;
   padding: 0 4px;
   color: #999;
   font-size: 13px;
   border-radius: 5px;
   margin-right: 3px;
 }
-  
+
 #about-container .button:hover {
   border: 1px solid #333;
   box-shadow: 0 0px 5px 0 rgba(0, 0, 0, 0.15);
+}
+
+.resume-cfa {
+  display: inline-block;
+  border: 1px solid #f80;
+  padding: 2px 10px !important;
+  color: #f80;
+  font-size: 15px;
+  border-radius: 5px;
+  margin-right: 3px;
+}
+
+.resume-cfa:hover {
+  background: rgba(255, 136, 0, 0.05);
+  border: 1px solid #f80 !important;
+  color: #f80 !important;
+  box-shadow: 0 0px 5px 0 rgba(255, 136, 0, 0.15);
+  text-decoration: none;
 }
 
 #about-container .major {
@@ -582,12 +684,45 @@ footer #signature {
     font-weight: 400;
   }
   
-  #portfolio {
+  .portfolio {
     margin: auto;
-    width: 58%;
+    width: 67.5%;
     padding: 4vw 0 2em 0;
   }
   
+  .project {
+    width: 86%;
+    padding: 30px 7%;
+  }
+  
+  .project:hover {
+    padding: 40px 7%;
+}
+  
+  .project-image {
+    width: 30%;
+    max-width: 250px;
+    height: auto;
+    right: 1.5%;
+  }
+  
+  .project-name {
+    font-size: 26px;
+  }
+  
+  .project-role {
+    font-size: 16px;
+  }
+  
+  .first-item {
+    border-radius: 1.3em 1.3em 0 0;
+  }
+
+  .last-item {
+    border-radius: 0 0 1.3em 1.3em;
+  }
+  
+/*
   .project-title {
     font-size: calc(15px + .95vw);
   }
@@ -596,6 +731,7 @@ footer #signature {
     font-size: calc(16px + 0.2vw);
     line-height: 1.75em;
   }
+*/
     
   #about-me,
   #contact {
@@ -611,6 +747,7 @@ footer #signature {
   }
   
   #about-container {
+    position: relative;
     margin: auto;
     max-width: 58%;
     padding: 0;
