--- a/css/style.css
+++ b/css/style.css
@@ -278,7 +278,7 @@ header h1 {
 .other-project {
   width: 86%;
   display: block;
-  padding: 15px 7%;
+  padding: 16px 7%;
   position: relative;
   background-color: #fff;
   border-top: 1px solid #eee;
@@ -291,21 +291,25 @@ header h1 {
 }
 
 .other-project:hover {
-  background-color: #efefef;
-  padding: 18px 7%;
+  background-color: #fafafa;
+  padding: 19px 7%;
   transition: all .2s ease-out;
+  cursor: pointer;
 }
 
 .other-project .project-name {
-  font-size: 18px;
+  font-size: 18.5px;
+  line-height: 25px;
 }
 
 .other-project .project-role {
-  font-size: 14px;
+  font-size: 14.5px;
+  margin-bottom: 0;
 }
 
 /* ------- */
 
+/*
 .project-info {
   padding: 1.3em 0;
 }
@@ -318,12 +322,12 @@ header h1 {
 
 .project-img {
   display: flex; 
-/*  display: inline-block;*/
   position: relative;
   top: 0;
 }
+*/
 
-/* Pseudo-element animation https://codepen.io/tribex/pen/ZxXJoO */
+/* Pseudo-element animation https://codepen.io/tribex/pen/ZxXJoO 
 .project-img::before {
   content: '';
   position: absolute;
@@ -556,6 +560,76 @@ footer #signature {
   color: #333;
 }
 
+/*modal*/
+
+/* The Modal */
+.modal-mask {
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  display: none; /* Hidden by default */
+  position: fixed;
+  z-index: 5;
+  left: 0;
+  top: 0;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.3); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-popup {
+  position: fixed;
+  left: 7%;
+  top: 30vh;
+  width: 75%;
+  z-index: 10;
+  background-color: #fefefe;
+  display: none;
+  padding: 10px 5.5%;
+  border-radius: .38em;
+}
+
+/* The Close Button */
+.close {
+  color: #333;
+  position: absolute;
+  right: 20px;
+  top: 15px;
+  font-size: 36px;
+  font-weight: 500;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal-header {
+  font-size: 19.5px;
+  width: 90%;
+  line-height: 1.5em;
+  font-weight: 500;
+}
+
+.modal-role {
+  font-size: 16px;
+  color: #aaa;
+}
+
+.modal-body {
+  font-size: 16px;
+}
+
+.modal-image {
+  text-align: center;
+  width: 200px;
+  height: auto;
+}
+
+/*  --- */
+
+
 @media (max-width: 30em) and (min-width: 15em) {
   header h1 {
 /*    font-size: 32px;*/
@@ -696,8 +770,8 @@ footer #signature {
   }
   
   .project:hover {
-    padding: 40px 7%;
-}
+    padding: 45px 7%;
+  }
   
   .project-image {
     width: 30%;
@@ -721,6 +795,31 @@ footer #signature {
   .last-item {
     border-radius: 0 0 1.3em 1.3em;
   }
+  
+  .other-project {
+    padding: 20px 7%;
+  }
+  
+  .other-project:hover {
+    padding: 23px 7%;
+  }
+  
+  .other-project .project-name {
+    font-size: 22px;
+    line-height: 30px;
+  }
+
+  .other-project .project-role {
+    font-size: 14.5px;
+  }
+  
+  .modal-popup {
+    left: 21%;
+    top: 30vh;
+    width: 52%;
+    padding: 10px 3%;
+  }
+
   
 /*
   .project-title {
