--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ nav #home {
   padding: 18px 1%;
   text-decoration: none;
   color: #000;
-  width: 200px;
+  width: 180px;
 }
 
 nav #home span {
@@ -54,7 +54,7 @@ nav #home:hover {
   transition: all .2s ease-out;
 }
 
-nav #home #home-title {
+nav #home-title {
   position: relative;
   display: inline-block;
   left: 42px;
@@ -681,7 +681,6 @@ footer #signature {
     clear: none;
     float: right;
     max-height: none;
-    
     width: auto;
     height: auto;
     max-width: 18%;
@@ -706,6 +705,7 @@ footer #signature {
     text-decoration: none;
     color: #000;
     padding: 0.25em;
+    width: auto;
     max-width: 17%;
   }
 
