--- a/css/style.css
+++ b/css/style.css
@@ -564,6 +564,33 @@ footer #signature {
   color: #333;
 }
 
+/* overlay */
+#overlay {
+  display: none;
+  position: absolute;
+  bottom: 0;
+  left: 80%;
+  width: 23%;
+  max-height: 200px;
+  z-index: 10;
+  box-shadow: 0 20px 30px 0 rgba(0, 0, 0, .42);
+  border-radius: .5em;
+}
+
+#profile-image {
+  display: block;
+  width: 100%;
+  border-radius: 0 0 .5em .5em;
+}
+
+#overlay-header {
+  padding: 6.5%;
+  border-radius: .5em .5em 0 0;
+  cursor: move;
+  z-index: 10;
+  background-color: #dee1e6;
+}
+
 /*modal*/
 
 /* The Modal */
@@ -864,6 +891,10 @@ footer #signature {
     line-height: 1.75em;
   }
 */
+  
+  #overlay {
+    display: block;
+  }
     
   #about-me,
   #contact {
