--- a/css/style.css
+++ b/css/style.css
@@ -564,6 +564,35 @@ footer #signature {
   color: #333;
 }
 
+/* overlay */
+#overlay {
+  display: none;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: calc(100px + 5vw);
+  height: calc(100px + 5.4vw);
+  z-index: 10;
+  box-shadow: 0 20px 30px 0 rgba(0, 0, 0, .42);
+  border-radius: .5em;
+}
+
+#profile-image {
+  display: block;
+  width: 100%;
+  height: auto;
+  border-radius: 0 0 .5em .5em;
+}
+
+#overlay-header {
+  display: block;
+  height: 20px;
+  border-radius: .5em .5em 0 0;
+  cursor: move;
+  z-index: 10;
+  background-color: #dee1e6;
+}
+
 /*modal*/
 
 /* The Modal */
@@ -667,6 +696,12 @@ footer #signature {
   
   header {
     padding-top: 25%;
+  }
+}
+
+@media (min-width: 64em) {
+  #overlay {
+    display: inline-block;
   }
 }
 
@@ -864,6 +899,7 @@ footer #signature {
     line-height: 1.75em;
   }
 */
+  
     
   #about-me,
   #contact {
