--- a/css/project.css
+++ b/css/project.css
@@ -88,6 +88,20 @@ img {
   height: auto;
 }
 
+.imgif {
+  height: auto;
+  width: 300px;
+  display: block;
+  margin: auto;
+}
+
+.imgif-horizontal {
+  height: auto;
+  width: 475px;
+  display: block;
+  margin: auto;
+}
+
 iframe {
   min-height: 300px;
   width: 100%;
@@ -151,5 +165,9 @@ figcaption {
   
   .main {
     margin: 0 15%;
+  }
+    
+  .highlight {
+    margin: 0 3%;
   }
 }
