Update experience, introduction, site structure, project order

--- a/css/style.css
+++ b/css/style.css
@@ -270,19 +270,19 @@ header h1 {
 .cubo {
   background-color: #E5F7F5;
   fill: #E5F7F5;
-  background-image: linear-gradient(-180deg, #E5F7F5 74%, #D3F5F1 100%);
+  background-image: linear-gradient(-180deg, #E5F7F5 74%, #c0f5ea 100%);
 }
 
 .pinchfun {
-  background-color: #fcf9f0;
-  fill: #fcf9f0;
-  background-image: linear-gradient(-180deg, #fcf9f0 74%, #fff4d9 98%);
+  background-color: #fefbde;
+  fill: #fefbde;
+  background-image: linear-gradient(-180deg, #fefbde 74%, #fff1b6 98%);
 }
 
 .music {
-  background-color: #e2f4f5;
-  fill: #e2f4f5;
-  background-image: linear-gradient(-180deg, #e2f4f5 74%, #c3e7ee 100%);
+  background-color: #ffece0;
+  fill: #ffece0;
+  background-image: linear-gradient(-180deg, #ffece0 74%, #ffddcd 100%);
 }
 
 .other-project {
@@ -608,7 +608,7 @@ footer #signature {
   height: 100%;
   display: none; 
   position: fixed;
-  z-index: 5;
+  z-index: 10;
   left: 0;
   top: 0;
   overflow: auto;
